--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
-install: 
-  - FILE="-Dfile=pocketbaseMobile.aar" 
-  - mvn install:install-file $FILE -DgroupId=com.github.rohitsangwan01 -DartifactId=pocketbase_android -Dversion=1.0.0 -Dpackaging=aar -DgeneratePom=true
+install:
+  - FILE="-Dfile=pocketfhirMobile.aar"
+  - mvn install:install-file $FILE -DgroupId=com.github.fhir-fli -DartifactId=pocketfhir_android -Dversion=1.0.0 -Dpackaging=aar -DgeneratePom=true
